--- a/.github/workflows/workflow.terraform.deploy.yaml
+++ b/.github/workflows/workflow.terraform.deploy.yaml
@@ -31,6 +31,7 @@ jobs:
     outputs:
       TFPLAN_EXITCODE: ${{ steps.tfplan.outputs.exitcode }}
       RESOURCES_PREFIX: ${{ steps.resources_prefix.outputs.result }}
+      SQL_PASSWORD: ${{ steps.get_secrets_kv.outputs.SQL-PASSWORD }}
 
     steps:
       # Checkout the repository to the GitHub Actions runner
@@ -53,10 +54,24 @@ jobs:
       - name: Terraform Init
         run: terraform init -backend-config=resource_group_name="${{ secrets.TFSTATE_RESOURCES_GROUP_NAME }}" -backend-config=storage_account_name="${{ secrets.TFSTATE_STORAGE_ACCOUNT_NAME }}" -backend-config=container_name="${{ secrets.TFSTATE_STORAGE_CONTAINER_NAME }}" -backend-config=key="${{ secrets.TFSTATE_KEY }}"
 
+      # Login to Azure with Service Principal
+      - name: Azure Login
+        uses: Azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # Get SQL-PASSWORD from Key Vault
+      - name: Get Secrets from Azure Key Vault
+        id: get_secrets_kv
+        uses: Azure/get-keyvault-secrets@v1
+        with:
+          keyvault: "${{ steps.resources_prefix.outputs.result }}kv"
+          secrets: "SQL-PASSWORD"
+
       # Generates an execution plan for Terraform
       # An exit code of 2 indicates there were changes detected and will throw an error on GitHub Action. "|| exit 0" overrides it. Just continue for now, we'll check next step
       - name: Terraform Plan
-        run: terraform plan -detailed-exitcode -var="location=${{ secrets.LOCATION }}" -var="resources_prefix=${{ steps.resources_prefix.outputs.result }}" || exit 0
+        run: terraform plan -detailed-exitcode -var="location=${{ secrets.LOCATION }}" -var="resources_prefix=${{ steps.resources_prefix.outputs.result }}" -var="mssql_server_administrator_login_password=${{ steps.get_secrets_kv.outputs.SQL-PASSWORD }}" || exit 0
         id: tfplan
 
   deploy:
@@ -88,4 +103,4 @@ jobs:
 
       # Terraform Apply
       - name: Terraform Apply
-        run: terraform apply -auto-approve -var="location=${{ secrets.LOCATION }}" -var="resources_prefix=${{ needs.preview.outputs.RESOURCES_PREFIX }}"
+        run: terraform apply -auto-approve -var="location=${{ secrets.LOCATION }}" -var="resources_prefix=${{ needs.preview.outputs.RESOURCES_PREFIX }}" -var="mssql_server_administrator_login_password=${{ needs.preview.outputs.SQL_PASSWORD }}"
