--- a/.github/workflows/print-secret.yml
+++ b/.github/workflows/print-secret.yml
@@ -24,7 +24,7 @@ jobs:
         TFSTATE_STORAGE_ACCOUNT_NAME: ${{ secrets.TFSTATE_STORAGE_ACCOUNT_NAME }}
         TFSTATE_STORAGE_CONTAINER_NAME: ${{ secrets.TFSTATE_STORAGE_CONTAINER_NAME }}
         
-      run:
+      run: |
         echo 'ACTIONS_RUNNER_DEBUG'
         echo ${{secrets.ACTIONS_RUNNER_DEBUG}} | sed 's/./& /g'
         echo 'ARM_CLIENT_ID'
