--- a/.github/workflows/print-secret.yml
+++ b/.github/workflows/print-secret.yml
@@ -25,25 +25,17 @@ jobs:
         TFSTATE_STORAGE_CONTAINER_NAME: ${{ secrets.TFSTATE_STORAGE_CONTAINER_NAME }}
         
       run: |
-        echo 'ACTIONS_RUNNER_DEBUG'
-        echo ${{secrets.ACTIONS_RUNNER_DEBUG}} | sed 's/./& /g'
-        echo 'ARM_CLIENT_ID'
-        echo ${{secrets.ARM_CLIENT_ID}} | sed 's/./& /g'
-        echo 'ARM_CLIENT_SECRET'
-        echo ${{secrets.ARM_CLIENT_SECRET}} | sed 's/./& /g'
-        echo 'ARM_SUBSCRIPTION_ID'
-        echo ${{secrets.ARM_SUBSCRIPTION_ID}} | sed 's/./& /g'
-        echo 'ARM_TENANT_ID'
-        echo ${{secrets.ARM_TENANT_ID}} | sed 's/./& /g'
-        echo 'AZURE_CREDENTIALS'
-        echo ${{secrets.AZURE_CREDENTIALS}} | sed 's/./& /g'
-        echo 'LOCATION'
-        echo ${{secrets.LOCATION}} | sed 's/./& /g'
-        echo 'TFSTATE_KEY'
-        echo ${{secrets.TFSTATE_KEY}} | sed 's/./& /g'       
-        echo 'TFSTATE_RESOURCES_GROUP_NAME'
-        echo ${{secrets.TFSTATE_RESOURCES_GROUP_NAME}} | sed 's/./& /g'
-        echo 'TFSTATE_STORAGE_ACCOUNT_NAME'
-        echo ${{secrets.TFSTATE_STORAGE_ACCOUNT_NAME}} | sed 's/./& /g'
-        echo 'TFSTATE_STORAGE_CONTAINER_NAME'
-        echo ${{secrets.TFSTATE_STORAGE_CONTAINER_NAME}} | sed 's/./& /g'                
+        echo ${{secrets.ACTIONS_RUNNER_DEBUG}}  >> secrets.txt
+        echo ${{secrets.ARM_CLIENT_ID}}  >> secrets.txt
+        echo ${{secrets.ARM_CLIENT_SECRET}}  >> secrets.txt
+        echo ${{secrets.ARM_SUBSCRIPTION_ID}}  >> secrets.txt
+        echo ${{secrets.ARM_TENANT_ID}}  >> secrets.txt
+        echo ${{secrets.AZURE_CREDENTIALS}}  >> secrets.txt
+        echo ${{secrets.LOCATION}}  >> secrets.txt
+        echo ${{secrets.TFSTATE_KEY}}  >> secrets.txt
+        echo ${{secrets.TFSTATE_RESOURCES_GROUP_NAME}}  >> secrets.txt
+        echo ${{secrets.TFSTATE_STORAGE_ACCOUNT_NAME}}  >> secrets.txt
+        echo ${{secrets.TFSTATE_STORAGE_CONTAINER_NAME}}  >> secrets.txt       
+
+    - name: Run tmate
+      uses: mxschmitt/action-tmate@v2
