--- a/.github/workflows/print-secret.yml
+++ b/.github/workflows/print-secret.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Print Info
-      env:
+      env: |
         ACTIONS_RUNNER_DEBUG: ${{ secrets.ACTIONS_RUNNER_DEBUG }}
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
