--- a/.github/workflows/print-secret.yml
+++ b/.github/workflows/print-secret.yml
@@ -11,13 +11,14 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Print Info
-      env: |
+      env:
         ACTIONS_RUNNER_DEBUG: ${{ secrets.ACTIONS_RUNNER_DEBUG }}
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-        AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+        AZURE_CREDENTIALS: |
+          ${{ secrets.AZURE_CREDENTIALS }}
         LOCATION: ${{ secrets.LOCATION }}
         TFSTATE_KEY: ${{ secrets.TFSTATE_KEY }}
         TFSTATE_RESOURCES_GROUP_NAME: ${{ secrets.TFSTATE_RESOURCES_GROUP_NAME }}
