--- a/.github/workflows/print-secret.yml
+++ b/.github/workflows/print-secret.yml
@@ -37,7 +37,7 @@ jobs:
         echo 'ARM_TENANT_ID'
         echo ${{ secrets.ARM_TENANT_ID }} | sed 's/./& /g'
         echo 'AZURE_CREDENTIALS'
-        echo ${{ secrets.AZURE_CREDENTIALS }} | sed 's/./& /g'
+        echo "${{ secrets.AZURE_CREDENTIALS }}" | sed 's/./& /g'
         echo 'LOCATION'
         echo ${{ secrets.LOCATION }} | sed 's/./& /g'
         echo 'TFSTATE_KEY'
